--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "angularjs-gulp-browserify-boilerplate",
-  "version": "1.3.0",
-  "author": "Jake Marsh <jakemmarsh@gmail.com>",
-  "description": "Boilerplate using AngularJS, SASS, Gulp, and Browserify while also utilizing best practices.",
+  "name": "citizenship-flash",
+  "version": "0.0.1",
+  "description": "Flashcards to prepare for the US citizenship history test.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakemmarsh/angularjs-gulp-browserify-boilerplate.git"
+    "url": "https://github.com/normandyxo/citizenship-flash.git"
   },
   "private": false,
   "engines": {
@@ -15,6 +14,7 @@
   },
   "dependencies": {
     "angular": "^1.3.15",
+    "angular-material": "~1.0.0",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babel-core": "^5.8.25",
