--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "engines": {
     "node": ">=0.12.x"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "angular": "^1.3.15",
-    "angular-material": "~1.0.0",
+    "angular-material": "^1.0.1",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babel-core": "^5.8.25",
