--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "^1.3.15",
     "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
     "angular-material": "^1.0.1",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
